add the css file and add 0,000,00

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <title>4D</title>
         <script src="script/script.js" defer></script>
+        <link href="style/style.css" rel="stylesheet">
     </head>
     <body>
-
+        <h1>4D</h1>
     </body>
 </html>
