the fuction to generate 1 number and some syleing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
         <link href="style/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1>4D</h1>
+        
+        <header>
+            <h1>4D</h1>
+            <nav>
+                <ul>
+                    <li id="one">Generate 1 number</li>
+                    <li>Generate all number</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div id="result">
+
+            </div>
+        </main>
     </body>
 </html>
