add the ability to generate 13 number

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav>
                 <ul>
                     <li id="one">Generate 1 number</li>
-                    <li>Generate all number</li>
+                    <li id="all">Generate all number</li>
                 </ul>
             </nav>
         </header>
