add footer and style the navigation

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
         <link href="style/style.css" rel="stylesheet">
     </head>
     <body>
-        
         <header>
             <h1>4D</h1>
             <nav>
                 <ul>
-                    <li id="one">Generate 1 number</li>
-                    <li id="all">Generate all number</li>
+                    <li id="one">Generate 1 Number</li>
+                    <li id="all">Generate All Number</li>
                 </ul>
             </nav>
         </header>
@@ -20,5 +19,8 @@
             <div id="result">
             </div>
         </main>
+        <footer>
+            <p> ©2025 m9k3s All Right Reserved</p>
+        </footer>
     </body>
 </html>
